# chirpmunk-gr4

./: .gitmodules  CMakeLists.txt  true
.github/workflows/: _cross-build.yml
apps/: CMakeLists.txt  common.hpp  config-debug.toml  config-iio-local.toml  config-iio-remote.toml  config-tezuka.toml  config.cpp  config.hpp  config.toml  graph_builder.hpp  lora_scan.cpp  lora_trx.cpp
blocks/include/gnuradio-4.0/lora/: MultiSfDecoder.hpp  TxQueueSource.hpp
blocks/include/gnuradio-4.0/lora/algorithm/: tx_chain.hpp
blocks/include/gnuradio-4.0/lora/phy/: CssDemod.hpp  DecodeChain.hpp  PreambleSync.hpp
scripts/src/lora/bridges/meshcore/: cli.py
scripts/src/lora/hwtests/: bridge_test.py  decode_test.py  harness.py  scan_test.py  transmit_test.py
test/: CMakeLists.txt  qa_lora_graph_builder_iio.cpp  qa_lora_multisf.cpp  qa_lora_rx.cpp  qa_lora_tx.cpp  qa_soapy_loopback.cpp
test_vectors/sf10_cr1_bw125000/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr1_bw62500/: tx_03_with_crc.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr2_bw125000/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr2_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr3_bw125000/: tx_03_with_crc.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr3_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr4_bw125000/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf10_cr4_bw62500/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf11_cr1_bw125000/: tx_06_gray_mapped.u32
test_vectors/sf11_cr1_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_07_iq_frame.cf32
test_vectors/sf11_cr2_bw125000/: tx_06_gray_mapped.u32
test_vectors/sf11_cr2_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_07_iq_frame.cf32
test_vectors/sf11_cr3_bw125000/: tx_06_gray_mapped.u32
test_vectors/sf11_cr3_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf11_cr4_bw125000/: tx_05_interleaved.u32  tx_07_iq_frame.cf32
test_vectors/sf11_cr4_bw62500/: tx_03_with_crc.u8  tx_06_gray_mapped.u32
test_vectors/sf12_cr1_bw62500/: tx_05_interleaved.u32  tx_06_gray_mapped.u32
test_vectors/sf12_cr2_bw125000/: tx_05_interleaved.u32  tx_06_gray_mapped.u32
test_vectors/sf12_cr3_bw125000/: tx_03_with_crc.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32
test_vectors/sf12_cr3_bw62500/: tx_04_encoded.u8  tx_06_gray_mapped.u32
test_vectors/sf12_cr4_bw125000/: tx_05_interleaved.u32  tx_06_gray_mapped.u32
test_vectors/sf7_cr1_bw125000/: tx_04_encoded.u8
test_vectors/sf7_cr1_bw62500/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf7_cr2_bw125000/: tx_04_encoded.u8  tx_06_gray_mapped.u32
test_vectors/sf7_cr2_bw62500/: tx_05_interleaved.u32  tx_07_iq_frame.cf32
test_vectors/sf7_cr3_bw125000/: payload.txt  tx_04_encoded.u8  tx_07_iq_frame.cf32
test_vectors/sf7_cr3_bw62500/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf7_cr4_bw125000/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf8_cr1_bw125000/: tx_05_interleaved.u32  tx_07_iq_frame.cf32
test_vectors/sf8_cr1_bw62500/: tx_04_encoded.u8  tx_06_gray_mapped.u32
test_vectors/sf8_cr2_bw125000/: tx_03_with_crc.u8  tx_04_encoded.u8
test_vectors/sf8_cr2_bw62500/: tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf8_cr3_bw125000/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf8_cr3_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf8_cr4_bw125000/: tx_04_encoded.u8  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf8_cr4_bw62500/: tx_05_interleaved.u32
test_vectors/sf9_cr1_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf9_cr2_bw125000/: tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf9_cr2_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32
test_vectors/sf9_cr3_bw125000/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_07_iq_frame.cf32
test_vectors/sf9_cr3_bw62500/: tx_04_encoded.u8  tx_05_interleaved.u32  tx_06_gray_mapped.u32
test_vectors/sf9_cr4_bw125000/: tx_06_gray_mapped.u32  tx_07_iq_frame.cf32
test_vectors/sf9_cr4_bw62500/: tx_05_interleaved.u32
tests/hwtests/: test_harness.py  test_lifecycle_mocks.py
